:lock: Disable robots crawl

--- a/app/views/layouts/app.twig
+++ b/app/views/layouts/app.twig
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <meta name="description" content="{{ config('meta_description') }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="robots" content="noindex, nofollow">
 
 <link rel="icon" href="{{ config('dark_mode') ? asset('images/favicon.dark.png') : asset('images/favicon.light.png') }}">
 <link rel="stylesheet" href="{{ asset('app.css') }}">
